--- a/simple-rest-mq/pom.xml
+++ b/simple-rest-mq/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.10-SNAPSHOT</version>
+		<version>2.7.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.moduretick</groupId>
@@ -32,7 +32,7 @@
 		<dependency>
 		    <groupId>org.apache.camel</groupId>
 		    <artifactId>camel-test-spring-junit5</artifactId>
-		    <version>3.12.0</version>
+		    <version>3.20.2</version>
 		</dependency>
 		 <dependency>
  			<groupId>org.apache.camel.springboot</groupId>
@@ -69,6 +69,11 @@
     		<artifactId>postgresql</artifactId>
     		<version>42.5.1</version>
 		</dependency>
+		<dependency>
+ 			<groupId>org.apache.camel.springboot</groupId>
+  			<artifactId>camel-activemq-starter</artifactId>
+  			<version>3.20.2</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
